--- a/KillerBeesGaming Client/KillerBeesGaming Client/Forms/FrmClientScreen.resx
+++ b/KillerBeesGaming Client/KillerBeesGaming Client/Forms/FrmClientScreen.resx
@@ -117,6 +117,70 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="ImageList1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <data name="ImageList1.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAADa
+        CwAAAk1TRnQBSQFMAgEBBAEAARABAAEQAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        AwABQAMAASADAAEBAQABCAYAAQgYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
+        AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
+        AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
+        AWYDAAGZAwABzAIAATMDAAIzAgABMwFmAgABMwGZAgABMwHMAgABMwH/AgABZgMAAWYBMwIAAmYCAAFm
+        AZkCAAFmAcwCAAFmAf8CAAGZAwABmQEzAgABmQFmAgACmQIAAZkBzAIAAZkB/wIAAcwDAAHMATMCAAHM
+        AWYCAAHMAZkCAALMAgABzAH/AgAB/wFmAgAB/wGZAgAB/wHMAQABMwH/AgAB/wEAATMBAAEzAQABZgEA
+        ATMBAAGZAQABMwEAAcwBAAEzAQAB/wEAAf8BMwIAAzMBAAIzAWYBAAIzAZkBAAIzAcwBAAIzAf8BAAEz
+        AWYCAAEzAWYBMwEAATMCZgEAATMBZgGZAQABMwFmAcwBAAEzAWYB/wEAATMBmQIAATMBmQEzAQABMwGZ
+        AWYBAAEzApkBAAEzAZkBzAEAATMBmQH/AQABMwHMAgABMwHMATMBAAEzAcwBZgEAATMBzAGZAQABMwLM
+        AQABMwHMAf8BAAEzAf8BMwEAATMB/wFmAQABMwH/AZkBAAEzAf8BzAEAATMC/wEAAWYDAAFmAQABMwEA
+        AWYBAAFmAQABZgEAAZkBAAFmAQABzAEAAWYBAAH/AQABZgEzAgABZgIzAQABZgEzAWYBAAFmATMBmQEA
+        AWYBMwHMAQABZgEzAf8BAAJmAgACZgEzAQADZgEAAmYBmQEAAmYBzAEAAWYBmQIAAWYBmQEzAQABZgGZ
+        AWYBAAFmApkBAAFmAZkBzAEAAWYBmQH/AQABZgHMAgABZgHMATMBAAFmAcwBmQEAAWYCzAEAAWYBzAH/
+        AQABZgH/AgABZgH/ATMBAAFmAf8BmQEAAWYB/wHMAQABzAEAAf8BAAH/AQABzAEAApkCAAGZATMBmQEA
+        AZkBAAGZAQABmQEAAcwBAAGZAwABmQIzAQABmQEAAWYBAAGZATMBzAEAAZkBAAH/AQABmQFmAgABmQFm
+        ATMBAAGZATMBZgEAAZkBZgGZAQABmQFmAcwBAAGZATMB/wEAApkBMwEAApkBZgEAA5kBAAKZAcwBAAKZ
+        Af8BAAGZAcwCAAGZAcwBMwEAAWYBzAFmAQABmQHMAZkBAAGZAswBAAGZAcwB/wEAAZkB/wIAAZkB/wEz
+        AQABmQHMAWYBAAGZAf8BmQEAAZkB/wHMAQABmQL/AQABzAMAAZkBAAEzAQABzAEAAWYBAAHMAQABmQEA
+        AcwBAAHMAQABmQEzAgABzAIzAQABzAEzAWYBAAHMATMBmQEAAcwBMwHMAQABzAEzAf8BAAHMAWYCAAHM
+        AWYBMwEAAZkCZgEAAcwBZgGZAQABzAFmAcwBAAGZAWYB/wEAAcwBmQIAAcwBmQEzAQABzAGZAWYBAAHM
+        ApkBAAHMAZkBzAEAAcwBmQH/AQACzAIAAswBMwEAAswBZgEAAswBmQEAA8wBAALMAf8BAAHMAf8CAAHM
+        Af8BMwEAAZkB/wFmAQABzAH/AZkBAAHMAf8BzAEAAcwC/wEAAcwBAAEzAQAB/wEAAWYBAAH/AQABmQEA
+        AcwBMwIAAf8CMwEAAf8BMwFmAQAB/wEzAZkBAAH/ATMBzAEAAf8BMwH/AQAB/wFmAgAB/wFmATMBAAHM
+        AmYBAAH/AWYBmQEAAf8BZgHMAQABzAFmAf8BAAH/AZkCAAH/AZkBMwEAAf8BmQFmAQAB/wKZAQAB/wGZ
+        AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
+        AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
+        AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
+        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD//8A/wD/AP8ABQABEwJK
+        AW4BcwFuARICSgFtA0oBbQETAUMB6wRuAXMFbgFLBG4BUQRSAksJUgHwAbwBkgEHAe8BBQaDAqoBqwGw
+        ARIBSgFzAUoCbgJKAeoBbgFtAUoBbgHqARMBSgHrBm4BSwJuAUsFbgFRAUsBUgFLC1IBdAEAAe0B9wL0
+        AYIBpASDAcwBqgGrAaoB/wHrAW4BFQFKAXMBbQFKAW4BSgFtAUoBFAFtAkoBFAHrAXMDbgFKAm4DSwVu
+        AXQBUgRLBFICSwFSAksBUgH/ARAB6wH/AQcBggGDAqoBpQHLAqoB5wEMAf8B6wERAUoBRAFzAUoBbQFK
+        AeoBSgFuAW0BcwNKAesGbgFLAW4CSwVuAXQCSwFSAksBUgFLAVECUgFRAVIBSwJSAv8BDgEQAewBaAFn
+        AmYBZwHnAcsBqgFnAv8BEgEVAUQBSgFuAUoBbgJKAUQBbgVKAesEbgFKA24BSwZuAksBUgRLAVEDUgF0
+        A1IBSwH/AfQB/wHyAfcBFQHeAv8B6wEMAY0D/wH2ARICSgFuAUoDbQFKARQBSgEUAUoBbgFKARMB6wlu
+        AUsFbgFRBFICSwFRAUsBUgFLAlIBSwJSAf8B9AQAAewC/wEHAgABwwEiAv8B6wJKAXMBSgHqAkoB6gIS
+        ARQCSgJtAewCbgFLDG4BSwJSAXQCUgFRAlIBSwJSAUsBUQFSAXQB/wHyARoBQwEPAf8BkgH0Af8BGwHv
+        AVEB5QGaAfYB/wESAUoBbQFKAesBbQFDARQCSgEVAkoBcwFEARIB6wNuAUsIbgFLAm4BSwF0AVIBdAZS
+        AVEBSwRSAfQBEwF5AQABkgL/AfMB8AETAe8BoAFzAQ8C9gHrAkoBFAFuAUoBcwESAuoBEAFtARIBFQES
+        AREB6wpuAUsEbgFLAVEBUgFLA1IDSwF0AlEDUgH/ARUBeQEAAe8B9AG8Af8B9AH2Ae8BoAF5AXMBDgH2
+        Am0BSgFtAkoBRAETAeoDSgEUAXMBFAESAesPbgFSAUsCUgFLAlIBSwFSAUsGUgH/ARwBeQELAQcBEgHD
+        AfMBEwH2Ae8C5QF+AQAB9gHqAUoC6gNKARIBSgETAUoBEgFKARQB6gFKAesObgFzAUoBSwFRA0sCUgFR
+        AVIBdANSAUsBUQH/ARwBeQELAf8B7wH/AfEBBwHsAQABoAHlAXgBIQH/AW0BSgHqBEoBbQHqARMBSgHq
+        AkoCbgFtC24BSwNuAVECSwJSBUsGUgH/ARwBoAIAAfcCBwHvAQcBwwLlAS4BIQH2ARMB6wZKARMCEgFK
+        ARQBbQJKAesPbgFRBFIBSwFRAVIBSwJSAUsBUgFLAXQBcwH/AZkB5QGgAkkB8AHsAUkBoAPlAS4BAAH/
+        ARMCSgFzAW4BSgHqARMBSgFtAW4BRAJKARQB6gHrCG4BSwZuAksCUgFRAUsBUgFLBlIBdAFSAfMBEwHl
+        AV4BLgFPAfYBmAEuBOUBUAH0Af8BEwFKAW4BcwFuAUoB6gFtAW4BbQJKAW0CSgEPAesGbgFzCG4CSwJS
+        AUsIUgFLAVIBdAH/AfYBGgF5AS4BTwH2AZgBLQGgAuUBoAFzAv8BEQFKA+wB6wESARMB6wJtARIC6gEU
+        AUMB7AXrAewBbgjrAXQBUgFLAlIBSwVSAksDUgESAfYB/wGgAX4BLgH2AfMBLQF+AuUBUQL2Af8BQgFN
+        AT4HAAE+AwABKAMAAUADAAEgAwABAQEAAQEGAAEBFgAD//8AAgAL
+</value>
+  </data>
+  <metadata name="Timer1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>127, 17</value>
+  </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
